--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="sidebar">
+        <a href="#">HOME</a>
+        <a href="#">COINS</a>
+        <a href="#">SKINS</a>
+        <a href="#">2X-Yc</a>
+        <a href="#">EARN-C</a>
+        <a href="#">TRADE-C</a>
+        <a href="#">ORACLE</a>
+    </div>
+
     <img src="assets/logo.png" alt="Coin Oracle logo" class="logo">
 
     <div class="theme-toggle">
@@ -16,8 +27,8 @@
                 <div class="toggle-button">
                     <div class="toggle-button-circles-container">
                         <div class="toggle-button-circle"></div>
-                        <div class="toggle-button-circles"></div>
-                        <div class="toggle-button-circles"></div>
+                        <div class="toggle-button-circle"></div>
+                        <div class="toggle-button-circle"></div>
                         <div class="toggle-button-circle"></div>
                         <div class="toggle-button-circle"></div>
                         <div class="toggle-button-circle"></div>
