--- a/index.html
+++ b/index.html
@@ -61,5 +61,9 @@
     </div>
 
     <script src="script.js" defer></script>
+    <div class="toss-coin">
+        <img src="assets/toss.png" alt="Toss Coin" class="coin-img">
+        <button class="toss-btn">Toss The Coin</button>
+    </div>
 </body>
 </html>
