more comments are added so user can get easily about the functions and logis in js, css and html.

--- a/incident.html
+++ b/incident.html
@@ -135,7 +135,7 @@
         <h1>Share Your Incident and Earn COINS</h1>
         <p>Tell us about your day and get rewarded with COINS!!!</p>
 
-        <!-- Live Balance -->
+        <!-- Live Balance shows the live balance from localStorage-->
         <p class="balance">Your Balance: <span id="coin-balance">0</span> 🪙</p>
 
         <form id="incident-form">
